--- a/index/static/index/main.css
+++ b/index/static/index/main.css
@@ -1,7 +1,23 @@
 /* Main css code */
 
+.leaflet-popup-content-wrapper{
+  cursor: pointer;
+}
+
 #map {
   height: 690px;
+}
+
+.info-popup {
+  position: fixed;
+  top: 20%;
+  left: 50%;
+  transform: translate(-50%, -20%);
+  background: white;
+  padding: 20px;
+  border: 1px solid #ccc;
+  z-index: 1000;
+  display: none;
 }
 
 .bd-placeholder-img {
