--- a/index/static/index/main.css
+++ b/index/static/index/main.css
@@ -2,6 +2,13 @@
 
 .leaflet-popup-content-wrapper{
   cursor: pointer;
+  display: flex;
+  justify-content: center;
+}
+
+.leaflet-popup-content{
+  text-align: center;
+  text-transform: uppercase;
 }
 
 #map {
@@ -13,11 +20,38 @@
   top: 20%;
   left: 50%;
   transform: translate(-50%, -20%);
-  background: white;
   padding: 20px;
-  border: 1px solid #ccc;
   z-index: 1000;
-  display: none;
+  display: flex;
+  flex-direction: column;
+  color: #f9fafb;
+  overflow: auto;
+}
+
+.content-div-main{
+  display: flex;
+  align-items: center;
+  width: 90%;
+  justify-content: space-between;
+  background-image: url(https://www.transparenttextures.com/patterns/cubes.png), linear-gradient(to right top, #cf4af3, #e73bd7, #f631bc, #fd31a2, #ff3a8b, #ff4b78, #ff5e68, #ff705c, #ff8c51, #ffaa49, #ffc848, #ffe652);
+  border-radius: 14px;
+  padding: 3% 5%;
+}
+
+.content-div-main img{
+  border-radius: 50%;
+}
+
+.close-btn{
+  background-color: #3a6df0;
+  border: none;
+  padding: 8px 26px;
+  color: #fff;
+  border-radius: 20px;
+  margin-top: 16px;
+  cursor: pointer;
+  transition: 0.3s;
+  white-space: nowrap;
 }
 
 .bd-placeholder-img {
